# msserviceprofiler

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  README_EN.md  README_en.md  __main__.py  build.py  build.sh  mkdocs.yml  pyproject.toml  requirements.txt  run_metric_st.py  set_env.sh
cpp/: CMakeLists.txt
cpp/include/msServiceProfiler/: Config.h  DbBuffer.h  Log.h  MultiThreadBufferManager.h  NpuMemoryUsage.h  Profiler.h  SecurityConstants.h  SecurityUtils.h  SecurityUtilsLog.h  ServiceProfilerDbWriter.h  ServiceProfilerInterface.h  ServiceProfilerManager.h  ServiceProfilerMspti.h  ServiceTracer.h  Tracer.h  Utils.h  msServiceProfiler.h
cpp/src/: Config.cpp  Log.cpp  NpuMemoryUsage.cpp  SecurityUtils.cpp  SecurityUtilsLog.cpp  ServiceProfilerDbWriter.cpp  ServiceProfilerManager.cpp  ServiceProfilerMspti.cpp  ServiceTracer.cpp  Tracer.cpp  Utils.cpp
modelevalstate/: pyproject.toml
modelevalstate/modelevalstate/: __init__.py  common.py  sitecustomize.py
modelevalstate/modelevalstate/config/: base_config.py  config.py  constant.py  custom_command.py  model_config.py
modelevalstate/modelevalstate/data_feature/: v1.py
modelevalstate/modelevalstate/inference/: constant.py  data_format_v1.py  simulate.py  simulate_vllm.py  state_eval_v1.py
modelevalstate/modelevalstate/optimizer/: __init__.py  analyze_profiler.py  communication.py  custom_process.py  global_best_custom.py  performance_tunner.py  register.py  scheduler.py  simulator.py  utils.py
modelevalstate/modelevalstate/patch/: model_runner_patch.patch  patch_manager.py  patch_vllm.py
modelevalstate/modelevalstate/plugins/: __init__.py
modelevalstate/modelevalstate/train/: pretrain.py  source_to_train.py  state_param.py
ms_service_metric/: DESIGN.md  README.md  pyproject.toml
ms_service_metric/example/: MsServiceMetric-grafana-Dashboard.json
ms_service_metric/ms_service_metric/: __init__.py  __main__.py
ms_service_metric/ms_service_metric/adapters/: __init__.py
ms_service_metric/ms_service_metric/control/: __init__.py  cli.py
ms_service_metric/ms_service_metric/core/: __init__.py  handler.py  symbol.py  symbol_handler_manager.py
ms_service_metric/ms_service_metric/handlers/: __init__.py  builtin.py
ms_service_metric/ms_service_metric/metrics/: __init__.py  meta_state.py  metrics_manager.py
ms_service_metric/ms_service_metric/utils/: __init__.py  exceptions.py  expr_eval.py  function_context.py  logger.py  shm_manager.py  version.py
ms_serviceparam_optimizer/: pyproject.toml
ms_serviceparam_optimizer/ms_serviceparam_optimizer/: analysis.py  common.py  config.toml  sitecustomize.py
ms_serviceparam_optimizer/ms_serviceparam_optimizer/config/: base_config.py  config.py  constant.py  custom_command.py
ms_serviceparam_optimizer/ms_serviceparam_optimizer/data_feature/: dataset.py  dataset_with_modin.py  dataset_with_swifter.py
ms_serviceparam_optimizer/ms_serviceparam_optimizer/inference/: __init__.py  common.py  dataset.py  file_reader.py  utils.py
ms_serviceparam_optimizer/ms_serviceparam_optimizer/model/: xgb_state_model.py
ms_serviceparam_optimizer/ms_serviceparam_optimizer/optimizer/: custom_process.py  experience_fine_tunning.py  health_check.py  optimizer.py  scheduler.py  server.py  store.py
ms_serviceparam_optimizer/ms_serviceparam_optimizer/patch/: __init__.py  model_runner_patch.patch
ms_serviceparam_optimizer/ms_serviceparam_optimizer/plugins/: __init__.py
msservice_advisor/: pyproject.toml
msservice_advisor/msservice_advisor/: advisor.py
msservice_advisor/msservice_advisor/profiling_analyze/: __init__.py  base_analyze.py  batch_analyze.py  npu_memory_analyze.py  register.py  utils.py
test/: .coverage  CMakeLists.txt  coverage.xml  path_manager.py  requirements.txt  run_st.py  run_st.sh  run_test.sh  run_unittest.py  run_unittest.sh  run_unittest_py3.py  run_ut.sh
test/coverage/report/: index.html
test/fuzz/: CMakeLists.txt  FuzzDefs.h  FuzzMain.cpp  run_fuzz.sh
test/fuzz/manager/: FuzzMain.cpp  StartSpanWithName.cpp  StartSpanWithName_fuzz.cpp  TestMark_fuzz.cpp  TestServiceProfiler_fuzz.cpp
test/presmoke/: conftest.py  profiler_analyze_mindie.py  profiler_analyze_vllm.py  serviceprofiler_param_optimizer.py
test/st/: conftest.py  utils.py
test/st/analyze/: test_analyze_cmd_ms_service_profiler.py  test_analyze_cmd_mspti.py  test_exporter_kvcache.py
test/st/checker/: checker_utils.py  csv_checker.py  domain_checker.py  dump_checker.py  json_checker.py  table_checker.py
test/st/collect/: collect_st_args.yaml  test_auto_make_json.py  test_pd_competition.py  test_pd_competition_acl_datatype_config.py  test_pd_competition_acl_prof_task_time_level.py  test_pd_competition_analyze.py  test_pd_competition_domain.py  test_pd_competition_domain_acl_prof.py  test_pd_competition_dynamic.py  test_pd_competition_format.py  test_pd_competition_mspti.py  test_pd_competition_mspti_dynamic.py  test_pd_competition_npu_cpu.py  test_pd_competition_timelimit.py
test/st/cpp/: test.cpp
test/st/executor/: exec_benchmark.py  exec_command.py  exec_mindie_server.py  exec_parse.py
test/st/multi_analyze/: test_analyze_cmd_ms_service_profiler.py
test/st/profiler/: test_mindie_llm_python_profiler.py
test/st/python/: conftest.py  utils.py
test/testcase/: test_plugins.py
test/ut/cpp/: msptiHelper.cpp  testConfig.cpp  testDbBuffer.cpp  testLog.cpp  testNpuMemoryUsage.cpp  testProfiler.cpp  testSecurityUtils.cpp  testServiceProfilerDbWriter.cpp  testServiceProfilerInterface.cpp  testServiceProfilerManager.cpp  testServiceProfilerMspti.cpp  testTracer.cpp  testUtils.cpp
test/ut/cpp_test/: CMakeLists.txt  default_config.json  msptiHelper.cpp  stubs.h  test.cpp  testConfig.cpp  testDbBuffer.cpp  testNpuMemoryUsage.cpp  testProfiler.cpp  testSecurityUtils.cpp  testServiceProfilerDbWriter.cpp  testServiceProfilerInterface.cpp  testServiceProfilerManager.cpp  testServiceProfilerMspti.cpp  testUtils.cpp
test/ut/python/: test_analyze.py  test_checker.py  test_exporter_coordinator.py  test_exporter_ep_balance.py  (+30 more)
(+845 files in other folders)
